--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,6 +12,8 @@ sites:
     url: https://samairj.consejodeestado.gov.co/
   - name: SAMAI AZURE
     url: https://samai.azurewebsites.net/
+  - - name: Indice Electronico
+    url: https://iedoc.consejodeestado.gov.co:448/  
  
     
 assigness:
