--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -40,11 +40,11 @@ status-website:
   introTitle: "**I-CE** Monitor de actividad y estado de servicios"
   introMessage: 
   theme: dark
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+  #navbar:
+   # - title: Status
+    #  href: /
+    #- title: GitHub
+     # href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
