--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -31,6 +31,9 @@ sites:
     url: samaijca.consejodeestado.gov.co
   - name: Linkce
     url: https://linkce.consejodeestado.gov.co/
+    - name: Linkce
+    url: https://iedoc.consejodeestado.gov.co:448/swagger.html
+    
     
  
     
